[gd_scene load_steps=37 format=3 uid="uid://bo5tu8ywsry1c"]

[ext_resource type="Script" uid="uid://28w3tm2vv6c7" path="res://entities/player/player.gd" id="1_y2db8"]
[ext_resource type="Shader" uid="uid://ow7mbbps2otj" path="res://shaders/frost.gdshader" id="1_yqrof"]
[ext_resource type="Texture2D" uid="uid://b8x66feq0n03p" path="res://entities/player/assets/bubble_sheet.png" id="3_a1qjk"]
[ext_resource type="Texture2D" uid="uid://cfb45cxgu35x" path="res://entities/player/assets/player_animations2.png" id="3_b2kln"]
[ext_resource type="Script" uid="uid://clk0dpb5pe8ty" path="res://components/GrowComponent/GrowComponent.gd" id="3_tekja"]
[ext_resource type="Texture2D" uid="uid://chy4wduqrvhs0" path="res://entities/player/assets/player_eyes.png" id="4_3wlsy"]
[ext_resource type="Script" uid="uid://bgpd4vkv8bjbk" path="res://entities/player/states/state_machine.gd" id="4_5c2io"]
[ext_resource type="Script" uid="uid://c648tla2l1a3r" path="res://components/HealthComponent/HealthComponent.gd" id="4_ap3xn"]
[ext_resource type="Script" uid="uid://dns8j3tufk62e" path="res://entities/player/states/spawning.gd" id="5_01a4e"]
[ext_resource type="Script" uid="uid://o0j4mv06hpxy" path="res://entities/player/eyes.gd" id="5_b2kln"]
[ext_resource type="Script" uid="uid://b0t6j7npbw78g" path="res://components/Hitbox2D/Hitbox2D.gd" id="5_iplt1"]
[ext_resource type="Script" uid="uid://iytq8aph286" path="res://components/WarmthComponent/WarmthComponent.gd" id="5_j3ovn"]
[ext_resource type="Script" uid="uid://dq1wg41ifg4p3" path="res://entities/player/states/active.gd" id="6_7a1se"]
[ext_resource type="Script" uid="uid://deho6lgc8wgao" path="res://components/Hurtbox2D/Hurtbox2D.gd" id="6_owvpp"]
[ext_resource type="Script" uid="uid://7jdsurafbrdf" path="res://entities/player/states/splitting.gd" id="7_lub02"]
[ext_resource type="Script" uid="uid://doymo03ie2gh5" path="res://entities/player/states/dying.gd" id="8_7a1se"]
[ext_resource type="Script" uid="uid://coj7j0xtiqbvg" path="res://entities/player/health_bar.gd" id="14_afbqv"]
[ext_resource type="Script" uid="uid://drq3fcelqxchj" path="res://entities/player/warmth_bar.gd" id="15_gx6sm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gx6sm"]
resource_local_to_scene = true
shader = ExtResource("1_yqrof")
shader_parameter/enabled = false
shader_parameter/ice_strength = 0.750000035625
shader_parameter/ice_tint = Color(0.2196, 0.8, 1, 1)
shader_parameter/sparkle_strength = 0.766000036385
shader_parameter/sparkle_sine_factor = 6.2831
shader_parameter/pixelation = 24.0
shader_parameter/black_threshold = 0.050000002375
shader_parameter/black_replace_color = Color(0, 0.247, 0.4431, 1)
shader_parameter/time_speed = 10.0

[sub_resource type="Animation" id="Animation_tekja"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bubs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lu8i8"]
resource_name = "idle"
length = 0.6667
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bubs:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.33333334, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="Animation" id="Animation_x1y6q"]
resource_name = "shoot_spawn"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bubs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03333333, 0.06666666, 0.099999994, 0.13333333, 0.16666666),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 7, 6, 5, 3, 1]
}

[sub_resource type="Animation" id="Animation_lub02"]
resource_name = "split"
length = 0.5
step = 0.0334
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bubs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667, 0.1, 0.13333334, 0.16666667, 0.2, 0.23333333, 0.33333334, 0.36666667, 0.4, 0.43333334, 0.46666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 5, 6, 7, 8, 7, 6, 5, 3, 1]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StateMachine/Splitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.33333334),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"split"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5c2io"]
_data = {
&"RESET": SubResource("Animation_tekja"),
&"idle": SubResource("Animation_lu8i8"),
&"shoot_spawn": SubResource("Animation_x1y6q"),
&"split": SubResource("Animation_lub02")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_vaj68"]
atlas = ExtResource("3_a1qjk")
region = Rect2(312, 0, 24, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2p71"]
atlas = ExtResource("3_a1qjk")
region = Rect2(336, 0, 24, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_xa8c5"]
atlas = ExtResource("3_a1qjk")
region = Rect2(360, 0, 24, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_5b14r"]
atlas = ExtResource("3_a1qjk")
region = Rect2(384, 0, 24, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnpwn"]
atlas = ExtResource("3_a1qjk")
region = Rect2(408, 0, 24, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_36jdj"]
atlas = ExtResource("3_a1qjk")
region = Rect2(432, 0, 24, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfvwf"]
atlas = ExtResource("3_a1qjk")
region = Rect2(456, 0, 24, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_j3ovn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vaj68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2p71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xa8c5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5b14r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnpwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36jdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfvwf")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gx6sm"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.101960786, 0.101960786, 0.101960786, 0.43137255)
border_color = Color(0, 0, 0, 1)
corner_detail = 6
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_afbqv"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(1, 0, 0, 0.7058824)
corner_detail = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yqrof"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.101960786, 0.101960786, 0.101960786, 0.43137255)
corner_detail = 6
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j3ovn"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0, 1, 0, 0.7058824)
corner_detail = 3
anti_aliasing = false

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("grow_component", "health_component", "warmth_component", "animation") groups=["Player"]]
collision_layer = 2
collision_mask = 51
script = ExtResource("1_y2db8")
grow_component = NodePath("GrowComponent")
health_component = NodePath("HealthComponent")
warmth_component = NodePath("WarmthComponent")
animation = NodePath("Bubs/AnimationPlayer")

[node name="Bubs" type="Sprite2D" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_gx6sm")
texture = ExtResource("3_b2kln")
hframes = 11

[node name="AnimationPlayer" type="AnimationPlayer" parent="Bubs"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_5c2io")
}
autoplay = "idle"

[node name="EyePositions" type="Node2D" parent="."]

[node name="Center" type="Marker2D" parent="EyePositions"]
position = Vector2(0, -4.5)
gizmo_extents = 2.0

[node name="Right" type="Marker2D" parent="EyePositions"]
position = Vector2(9, 0)
gizmo_extents = 2.0

[node name="Left" type="Marker2D" parent="EyePositions"]
position = Vector2(-9, 0)
gizmo_extents = 2.0

[node name="Up" type="Marker2D" parent="EyePositions"]
position = Vector2(0, -9)
gizmo_extents = 2.0

[node name="Down" type="Marker2D" parent="EyePositions"]
gizmo_extents = 2.0

[node name="Eyes" type="Sprite2D" parent="." node_paths=PackedStringArray("player", "warmth_component", "player_state_machine", "center_position", "left_position", "up_position", "right_position", "down_position")]
position = Vector2(0, -4.5)
texture = ExtResource("4_3wlsy")
hframes = 2
script = ExtResource("5_b2kln")
player = NodePath("..")
warmth_component = NodePath("../WarmthComponent")
player_state_machine = NodePath("../StateMachine")
eye_move_time = 0.3
center_position = NodePath("../EyePositions/Center")
left_position = NodePath("../EyePositions/Left")
up_position = NodePath("../EyePositions/Up")
right_position = NodePath("../EyePositions/Right")
down_position = NodePath("../EyePositions/Down")

[node name="DeathAnim" type="AnimatedSprite2D" parent="."]
visible = false
modulate = Color(0.43529412, 0.6392157, 1, 1)
z_index = 1
position = Vector2(0, 4)
scale = Vector2(1.4, 1.4)
sprite_frames = SubResource("SpriteFrames_j3ovn")

[node name="GrowComponent" type="Node" parent="." node_paths=PackedStringArray("sprites", "nodes", "collision_offsets")]
script = ExtResource("3_tekja")
sprites = [NodePath("../Bubs"), NodePath("../Eyes")]
nodes = [NodePath("../EyePositions")]
collision_offsets = {
NodePath("../PhysicsCollider"): -5.0,
NodePath("../MergeArea/MergeCollider"): 3.0,
NodePath("../Hitbox2D/HitboxCollider"): 0.0,
NodePath("../Hurtbox2D/HurtboxCollider"): 0.0
}
metadata/_custom_type_script = "uid://clk0dpb5pe8ty"

[node name="WarmthComponent" type="Node" parent="."]
script = ExtResource("5_j3ovn")
thaw_rate = 5.0
max_value = 10.0
use_initial_value = true
initial_value = 10.0
metadata/_custom_type_script = "uid://iytq8aph286"

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_ap3xn")
max_health = 50.0
metadata/_custom_type_script = "uid://c648tla2l1a3r"

[node name="PhysicsCollider" type="CollisionShape2D" parent="."]
debug_color = Color(0.99959034, 0, 0.12267729, 0.41960785)

[node name="MergeArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 10

[node name="MergeCollider" type="CollisionShape2D" parent="MergeArea"]
unique_name_in_owner = true
debug_color = Color(0, 0.63703483, 0.40133417, 0.41960785)

[node name="Hitbox2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4
script = ExtResource("5_iplt1")
damage = 1.0
metadata/_custom_type_script = "uid://b0t6j7npbw78g"

[node name="HitboxCollider" type="CollisionShape2D" parent="Hitbox2D"]

[node name="Hurtbox2D" type="Area2D" parent="." node_paths=PackedStringArray("health")]
collision_layer = 2
collision_mask = 4
script = ExtResource("6_owvpp")
health = NodePath("../HealthComponent")
iframes_seconds = 0.1
metadata/_custom_type_script = "uid://deho6lgc8wgao"

[node name="HurtboxCollider" type="CollisionShape2D" parent="Hurtbox2D"]

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("controlled_node", "initial_state")]
script = ExtResource("4_5c2io")
controlled_node = NodePath("..")
initial_state = NodePath("Spawning")
metadata/_custom_type_script = "uid://bnuyec0xe7i0k"

[node name="Spawning" type="Node" parent="StateMachine" node_paths=PackedStringArray("merge_collider")]
script = ExtResource("5_01a4e")
merge_collider = NodePath("../../MergeArea/MergeCollider")
state_name = "spawning"
metadata/_custom_type_script = "uid://xmr3p4wrraye"

[node name="Active" type="Node" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource("6_7a1se")
state_name = "active"
metadata/_custom_type_script = "uid://xmr3p4wrraye"

[node name="Splitting" type="Node" parent="StateMachine" node_paths=PackedStringArray("merge_collider")]
script = ExtResource("7_lub02")
player_scene_path = "res://entities/player/player.tscn"
merge_collider = NodePath("../../MergeArea/MergeCollider")
state_name = "splitting"
metadata/_custom_type_script = "uid://xmr3p4wrraye"

[node name="Dying" type="Node" parent="StateMachine" node_paths=PackedStringArray("death_anim", "disable_nodes")]
script = ExtResource("8_7a1se")
death_anim = NodePath("../../DeathAnim")
disable_nodes = [NodePath("../../Bubs"), NodePath("../../PhysicsCollider"), NodePath("../../GrowComponent"), NodePath("../../HealthComponent"), NodePath("../../Hitbox2D"), NodePath("../../Hurtbox2D"), NodePath("../../MergeArea/MergeCollider")]
state_name = "dying"
metadata/_custom_type_script = "uid://xmr3p4wrraye"

[node name="StatbarPosition" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -20)

[node name="Stats" type="VBoxContainer" parent="StatbarPosition"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -12.0
offset_right = 15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 2

[node name="WarmthBar" type="ProgressBar" parent="StatbarPosition/Stats" node_paths=PackedStringArray("warmth")]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_gx6sm")
theme_override_styles/fill = SubResource("StyleBoxFlat_afbqv")
value = 50.0
show_percentage = false
script = ExtResource("15_gx6sm")
warmth = NodePath("../../../WarmthComponent")
warm_color = Color(1, 0, 0, 1)
frozen_color = Color(0, 0.5058824, 1, 1)

[node name="HealthBar" type="ProgressBar" parent="StatbarPosition/Stats" node_paths=PackedStringArray("player")]
custom_minimum_size = Vector2(20, 5)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/background = SubResource("StyleBoxFlat_yqrof")
theme_override_styles/fill = SubResource("StyleBoxFlat_j3ovn")
value = 100.0
show_percentage = false
script = ExtResource("14_afbqv")
player = NodePath("../../..")
min_width = 10.0
max_width = 50.0

[connection signal="mass_changed" from="." to="StatbarPosition/Stats/HealthBar" method="_on_mass_changed"]
[connection signal="animation_finished" from="Bubs/AnimationPlayer" to="StateMachine/Splitting" method="_on_animation_player_animation_finished"]
[connection signal="changed" from="WarmthComponent" to="StatbarPosition/Stats/WarmthBar" method="_on_warmth_changed"]
[connection signal="damaged" from="HealthComponent" to="." method="_on_damaged"]
[connection signal="died" from="HealthComponent" to="StateMachine" method="_on_player_died"]
[connection signal="healed" from="HealthComponent" to="." method="_on_healed"]
[connection signal="body_entered" from="MergeArea" to="." method="_on_merge_area_body_entered"]
